--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,19 @@
 {
   "name": "Moveplaza",
   "short_name": "Moveplaza",
+  "description": "엘리트 선수를 위한 퍼포먼스 & 재활 데이터 플랫폼",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#1e3a8a",
+  "background_color": "#0f172a",
+  "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/1946/1946429.png",
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/1946/1946429.png",
+      "src": "/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
