--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "html-to-image": "^1.11.13",
     "jspdf": "^4.1.0",
     "next": "16.1.6",
+    "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-calendar": "^6.0.0",
     "react-dom": "19.2.3",
