--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@supabase/supabase-js": "^2.95.2",
     "html-to-image": "^1.11.13",
     "jspdf": "^4.1.0",
     "next": "16.1.6",
-    "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-calendar": "^6.0.0",
     "react-dom": "19.2.3",
