--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
-    "@supabase/supabase-js": "^2.95.2",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/supabase-js": "^2.95.3",
     "html-to-image": "^1.11.13",
     "jspdf": "^4.1.0",
     "next": "16.1.6",
