--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.95.3",
+    "canvas-confetti": "^1.9.4",
+    "framer-motion": "^12.33.0",
     "html-to-image": "^1.11.13",
     "jspdf": "^4.1.0",
     "next": "16.1.6",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
