--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "/app-icon.png",
+      "src": "/final-icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/app-icon.png",
+      "src": "/final-icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
